--- a/README
+++ b/README
@@ -3,42 +3,42 @@ xfs
 Xorg Font Server
 
 Runtime requirements:
-  cygwin-1.5.19-4
-  libXfont1-1.0.1-1
+  cygwin-1.5.20-1
+  libXfont1-1.0.2-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.19-4
-  autoconf2.5-2.59-3
-  automake1.7-1.7.9-1
+  cygwin-1.5.20-1
+  autoconf2.5-2.59-2
+  automake1.9-1.9.6-1
   binutils-20050610-1
-  cygport-0.1.5-1
+  cygport-0.2.2-1
   gawk-3.1.5-2
   gcc-core-3.4.4-1
   make-3.80-1
   pkg-config-0.20-1
-  sed-4.1.4-1
-  xorg-util-macros-1.0.1-1
+  sed-4.1.5-1
+  xorg-util-macros-1.0.2-1
   xtrans-1.0.0-1
 
 Canonical website:
   http://xorg.freedesktop.org/
 
 Canonical download:
-  http://ftp.x.org/pub/X11R7.0/src/everything/
+  http://xorg.freedesktop.org/releases/individual/app/
 
 -------------------------------------------
 
 Build instructions:
-  unpack xfs-1.0.1-X-src.tar.bz2
+  unpack xfs-1.0.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./xfs-1.0.1-X.cygport all
+  cygport ./xfs-1.0.2-X.cygport all
 
 This will create:
-  /usr/src/xfs-1.0.1-X-src.tar.bz2
-  /usr/src/xfs-1.0.1-X.tar.bz2
+  /usr/src/xfs-1.0.2-X-src.tar.bz2
+  /usr/src/xfs-1.0.2-X.tar.bz2
 
 -------------------------------------------
 
@@ -46,15 +46,18 @@ Files included in the binary package:
 
   /usr/bin/xfs.exe
   /usr/lib/X11/fs/config
-  /usr/share/doc/Cygwin/xfs-1.0.1.README
-  /usr/share/doc/xfs-1.0.1/COPYING
-  /usr/share/doc/xfs-1.0.1/ChangeLog
-  /usr/share/doc/xfs-1.0.1/README
+  /usr/share/doc/Cygwin/xfs-1.0.2.README
+  /usr/share/doc/xfs-1.0.2/COPYING
+  /usr/share/doc/xfs-1.0.2/ChangeLog
+  /usr/share/doc/xfs-1.0.2/README
   /usr/share/man/man1/xfs.1.gz
 
 ------------------
 
 Port Notes:
+
+----- version 1.0.2-1 -----
+X11R7.1 version bump.
 
 ----- version 1.0.1-1 -----
 Initial Cygwin release of modular X11R7.0.
