--- a/README
+++ b/README
@@ -1,25 +1,24 @@
 xfs
 ------------------------------------------
-Xorg Font Server
+X.Org Font Server
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  libXfont1-1.3.1-1
+  cygwin-1.5.25-15
+  libXfont1-1.3.3-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.24-2
-  autoconf2.5-2.61-1
-  automake1.10-1.10-1
-  binutils-20060817-1
-  cygport-0.3.5-1
-  gawk-3.1.5-4
+  autoconf2.5-2.63-1
+  automake1.10-1.10.1-1
+  binutils-20080624-2
+  cygport-0.4.2-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
   make-3.81-1
-  pkg-config-0.21-1
+  pkg-config-0.23a-2
   sed-4.1.5-2
-  xorg-util-macros-1.1.5-1
-  xtrans-1.0.4-1
+  xorg-util-macros-1.1.6-1
+  xtrans-1.2.2-1
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -30,15 +29,15 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack xfs-1.0.5-X-src.tar.bz2
+  unpack xfs-1.0.8-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./xfs-1.0.5-X.cygport all
+  cygport ./xfs-1.0.8-X.cygport all
 
 This will create:
-  /usr/src/xfs-1.0.5-X-src.tar.bz2
-  /usr/src/xfs-1.0.5-X.tar.bz2
+  /usr/src/xfs-1.0.8-X-src.tar.bz2
+  /usr/src/xfs-1.0.8-X.tar.bz2
 
 -------------------------------------------
 
@@ -46,15 +45,17 @@ Files included in the binary package:
 
   /usr/bin/xfs.exe
   /usr/lib/X11/fs/config
-  /usr/share/doc/Cygwin/xfs-1.0.5.README
-  /usr/share/doc/xfs-1.0.5/COPYING
-  /usr/share/doc/xfs-1.0.5/ChangeLog
-  /usr/share/doc/xfs-1.0.5/README
+  /usr/share/doc/xfs-1.0.8/COPYING
+  /usr/share/doc/xfs-1.0.8/ChangeLog
+  /usr/share/doc/xfs-1.0.8/README
   /usr/share/man/man1/xfs.1.gz
 
 ------------------
 
 Port Notes:
+
+----- version 1.0.8-1 -----
+Version bump.
 
 ----- version 1.0.5-1 -----
 Fix for security vulnerability CVE-2007-4568.
